# haskell-mooc

./: .gitignore  README.md
exercises/: Set1.hs  Set2a.hs  Set2b.hs  Set3a.hs  flake.nix  tests.cabal
