name:          tests
version:       0.0.1
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
      array
    , base
    , bytestring
    , containers
    , generic-random
    , hspec
    , HTTP
    , http-types
    , JuicyPixels
    , parallel
    , QuickCheck
    , sqlite-simple
    , template-haskell
    , text
    , th-abstraction
    , transformers
    , wai
    , warp

  default-language: GHC2024
  default-extensions:
    BlockArguments
